--- a/index.html
+++ b/index.html
@@ -209,85 +209,87 @@
                         </div>
                       </div>
                       <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab" tabindex="0">
-                        <h3 class="mt-2">Bring the Love to Residence and Agriculture</h3>
-                        <div class="row">
-                          <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
-                            <div class="card h-100">
-                              <img src="./house1.jpg" class="card-img-top" alt="...">
-                              <div class="card-body">
-                                <h5 class="card-title">Ikoyi Resettlement</h5>
-                                <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
-                                <a href="#" class="btn btn-green btn-sm">Check it</a>
+                        <div class="container">
+                          <h3 class="mt-2">Bring the Love to Residence and Agriculture</h3>
+                          <div class="row">
+                            <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
+                              <div class="card h-100">
+                                <img src="./house1.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                  <h5 class="card-title">Ikoyi Resettlement</h5>
+                                  <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
+                                  <a href="#" class="btn btn-green btn-sm">Check it</a>
+                                </div>
                               </div>
                             </div>
-                          </div>
-                          <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
-                            <div class="card h-100">
-                              <img src="./house2.jpg" class="card-img-top" alt="...">
-                              <div class="card-body">
-                                <h5 class="card-title">Kuje, Abuja</h5>
-                                <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
-                                <a href="#" class="btn btn-green btn-sm">Check it</a>
+                            <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
+                              <div class="card h-100">
+                                <img src="./house2.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                  <h5 class="card-title">Kuje, Abuja</h5>
+                                  <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
+                                  <a href="#" class="btn btn-green btn-sm">Check it</a>
+                                </div>
                               </div>
                             </div>
-                          </div>
-                          <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
-                            <div class="card h-100">
-                              <img src="./house3.jpg" class="card-img-top" alt="...">
-                              <div class="card-body">
-                                <h5 class="card-title">Akure, Ondo</h5>
-                                <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
-                                <a href="#" class="btn btn-green btn-sm">Check it</a>
+                            <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
+                              <div class="card h-100">
+                                <img src="./house3.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                  <h5 class="card-title">Akure, Ondo</h5>
+                                  <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
+                                  <a href="#" class="btn btn-green btn-sm">Check it</a>
+                                </div>
                               </div>
                             </div>
-                          </div>
-                          <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
-                            <div class="card h-100">
-                              <img src="./house4.jpg" class="card-img-top" alt="...">
-                              <div class="card-body">
-                                <h5 class="card-title">Akure, Ondo</h5>
-                                <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
-                                <a href="#" class="btn btn-green btn-sm">Check it</a>
+                            <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
+                              <div class="card h-100">
+                                <img src="./house4.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                  <h5 class="card-title">Akure, Ondo</h5>
+                                  <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
+                                  <a href="#" class="btn btn-green btn-sm">Check it</a>
+                                </div>
                               </div>
                             </div>
-                          </div>
-                          <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
-                            <div class="card h-100">
-                              <img src="./house1.jpg" class="card-img-top" alt="...">
-                              <div class="card-body">
-                                <h5 class="card-title">Ikoyi Resettlement</h5>
-                                <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
-                                <a href="#" class="btn btn-green btn-sm">Check it</a>
+                            <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
+                              <div class="card h-100">
+                                <img src="./house1.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                  <h5 class="card-title">Ikoyi Resettlement</h5>
+                                  <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
+                                  <a href="#" class="btn btn-green btn-sm">Check it</a>
+                                </div>
                               </div>
                             </div>
-                          </div>
-                          <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
-                            <div class="card h-100">
-                              <img src="./house2.jpg" class="card-img-top" alt="...">
-                              <div class="card-body">
-                                <h5 class="card-title">Kuje, Abuja</h5>
-                                <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
-                                <a href="#" class="btn btn-green btn-sm">Check it</a>
+                            <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
+                              <div class="card h-100">
+                                <img src="./house2.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                  <h5 class="card-title">Kuje, Abuja</h5>
+                                  <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
+                                  <a href="#" class="btn btn-green btn-sm">Check it</a>
+                                </div>
                               </div>
                             </div>
-                          </div>
-                          <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
-                            <div class="card h-100">
-                              <img src="./house3.jpg" class="card-img-top" alt="...">
-                              <div class="card-body">
-                                <h5 class="card-title">Akure, Ondo</h5>
-                                <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
-                                <a href="#" class="btn btn-green btn-sm">Check it</a>
+                            <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
+                              <div class="card h-100">
+                                <img src="./house3.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                  <h5 class="card-title">Akure, Ondo</h5>
+                                  <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
+                                  <a href="#" class="btn btn-green btn-sm">Check it</a>
+                                </div>
                               </div>
                             </div>
-                          </div>
-                          <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
-                            <div class="card h-100">
-                              <img src="./house4.jpg" class="card-img-top" alt="...">
-                              <div class="card-body">
-                                <h5 class="card-title">Akure, Ondo</h5>
-                                <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
-                                <a href="#" class="btn btn-green btn-sm">Check it</a>
+                            <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
+                              <div class="card h-100">
+                                <img src="./house4.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                  <h5 class="card-title">Akure, Ondo</h5>
+                                  <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
+                                  <a href="#" class="btn btn-green btn-sm">Check it</a>
+                                </div>
                               </div>
                             </div>
                           </div>
