Changes to Footer and Added the prototyping section

--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
                       <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false"><i class="bi bi-book-half"></i></button>
                       <button class="nav-link" id="v-pills-marketplace-tab" data-bs-toggle="pill" data-bs-target="#v-pills-marketplace" type="button" role="tab" aria-controls="v-pills-marketplace" aria-selected="false"><i class="bi bi-shop"></i></button>
                       <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill" data-bs-target="#v-pills-messages" type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false"><i class="bi bi-house"></i></button>
+                      <button class="nav-link" id="v-pills-bulb-tab" data-bs-toggle="pill" data-bs-target="#v-pills-bulb" type="button" role="tab" aria-controls="v-pills-bulb" aria-selected="false"><i class="bi bi-lightbulb"></i></button>
                       <button class="nav-link" id="v-pills-settings-tab" data-bs-toggle="pill" data-bs-target="#v-pills-settings" type="button" role="tab" aria-controls="v-pills-settings" aria-selected="false"><i class="bi bi-gear-wide-connected"></i></button>
                       <a href="signup.html" class="btn btn-success btn-sm mt-5 text-decoration-none">Logout</a>
                     </div>
                     <div class="tab-content" id="v-pills-tabContent">
                       <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab" tabindex="0">
                         <div class="container" id="container">
-                            <div class="row">
+                            <div class="row dashboard">
                                 <header class="d-flex justify-content-between my-2">
                                     <div class="profile d-flex">
                                         <div class="profile-image">
@@ -198,7 +199,7 @@
                                   </div>
                                 </div>
                             </main>
-                            <footer class="d-flex justify-content-center text-secondary">Copyright @AgroSec 2024</footer> 
+                            <footer class="d-flex justify-content-center text-secondary books">Copyright @AgroSec 2024</footer> 
                           </div>
                         </div>
                       </div>
@@ -294,6 +295,9 @@
                             </div>
                           </div>
                         </div>
+                      </div>
+                      <div class="tab-pane fade" id="v-pills-bulb" role="tabpanel" aria-labelledby="v-pills-bulb-tab" tabindex="0">
+                        Light Bulb Area - Prototype as you like
                       </div>
                       <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab" tabindex="0">
                         <div class="container">
