--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,9 @@
                                 <header class="d-flex justify-content-between my-2">
                                     <div class="profile d-flex">
                                         <div class="profile-image">
-                                            <img src="./Ellipse 68.png" alt="Profile-Image">
+                                          <a href="#" id="profileImgdropdown" data-bs-toggle="dropdown">
+                                            <img src="./Ellipse 68.png" alt="Profile-Image" id="profileImg">
+                                          </a>
                                         </div>
                                         <div class="profile-text d-flex align-items-center mt-2">Welcome Mary</div>
                                     </div>
