changed the image Icon container

--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,15 @@
                                 <header class="d-flex justify-content-between my-2">
                                     <div class="profile d-flex">
                                         <div class="profile-image">
-                                          <a href="#" id="profileImgdropdown" data-bs-toggle="dropdown">
+                                          <a href="#" id="profileImgdropdown">
                                             <img src="./Ellipse 68.png" alt="Profile-Image" id="profileImg">
                                           </a>
                                         </div>
-                                        <div class="profile-text d-flex align-items-center mt-2">Welcome Mary</div>
+                                        <div class="profile-text ms-2 mt-2">
+                                          <!-- d-flex align-items-center mt-2 -->
+                                          <small><b>234 points</b></small>
+                                          <div class="m-0">Welcome Mary</div>
+                                        </div>
                                     </div>
                                     <div class="side-bar d-flex">
                                         <form method="GET">
